// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CowCard should render correctly 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      {
        "marginBottom": 8,
        "marginTop": 8,
      },
      {
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
      {
        "marginLeft": -10,
      },
      {
        "marginRight": 24,
      },
      {
        "backgroundColor": "#272727",
      },
      {
        "borderBottomRightRadius": 24,
        "borderTopRightRadius": 24,
      },
      {
        "borderRightWidth": 4,
      },
      {
        "borderBottomColor": "#6bc0eb",
        "borderLeftColor": "#6bc0eb",
        "borderRightColor": "#6bc0eb",
        "borderTopColor": "#6bc0eb",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "marginBottom": 8,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "alignItems": "center",
          },
          {
            "borderBottomWidth": 2,
            "borderTopWidth": 2,
          },
          {
            "borderRightWidth": 2,
          },
          {
            "borderBottomLeftRadius": 16,
            "borderBottomRightRadius": 16,
            "borderTopLeftRadius": 16,
            "borderTopRightRadius": 16,
          },
          {
            "borderBottomColor": "#6bc0eb",
            "borderLeftColor": "#6bc0eb",
            "borderRightColor": "#6bc0eb",
            "borderTopColor": "#6bc0eb",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#ffffff",
            },
            {
              "fontSize": 14,
              "lineHeight": 20,
            },
            {
              "fontFamily": "Nunito-Bold",
            },
          ]
        }
      />
      <Text
        style={
          [
            {
              "color": "#ffffff",
            },
            {
              "fontSize": 24,
              "lineHeight": 32,
            },
            {
              "fontFamily": "Nunito-Bold",
            },
            [
              {
                "marginLeft": 16,
              },
            ],
          ]
        }
      >
        Vaca Test
      </Text>
    </View>
    <View
      style={
        [
          {
            "marginLeft": 8,
          },
          {
            "marginTop": 8,
          },
          {
            "flexDirection": "column",
          },
          {
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "marginBottom": 8,
            },
            {
              "flexDirection": "row",
            },
            {
              "alignItems": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#6bc0eb",
              },
              {
                "fontSize": 18,
                "lineHeight": 28,
              },
              {
                "fontFamily": "Nunito-BoldItalic",
              },
            ]
          }
        >
          COW001
        </Text>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "column",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#ffffff",
              },
              {
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "fontFamily": "Nunito-Medium",
              },
            ]
          }
        >
          Se incorporó en: 
          1/1/2022
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
              },
              {
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "fontFamily": "Nunito-Medium",
              },
            ]
          }
        >
          Sexo: 
          Femenino
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
              },
              {
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "fontFamily": "Nunito-Medium",
              },
            ]
          }
        >
          Raza: 
          Holstein
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
              },
              {
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "fontFamily": "Nunito-Medium",
              },
            ]
          }
        >
          Fase: 
          Ternero
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
              },
              {
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "fontFamily": "Nunito-Medium",
              },
            ]
          }
        >
          Es hijo/a de: 
          Vaca Test
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "backgroundColor": "#272727",
        },
        {
          "borderRightWidth": 8,
        },
        {
          "borderLeftWidth": 8,
        },
        {
          "borderBottomColor": "#2254ba",
          "borderLeftColor": "#2254ba",
          "borderRightColor": "#2254ba",
          "borderTopColor": "#2254ba",
        },
        {
          "borderBottomLeftRadius": 24,
          "borderBottomRightRadius": 24,
          "borderTopLeftRadius": 24,
          "borderTopRightRadius": 24,
        },
        {
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        },
        {
          "marginBottom": 8,
          "marginLeft": 8,
          "marginRight": 8,
          "marginTop": 8,
        },
      ]
    }
    testID="delete-cow-button"
  >
    <Text
      style={
        [
          {
            "color": "#ffffff",
          },
          {
            "fontSize": 18,
            "lineHeight": 28,
          },
          {
            "textAlign": "center",
          },
          {
            "fontFamily": "Nunito-Medium",
          },
          {
            "marginLeft": 8,
            "marginRight": 8,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            {
              "alignItems": "center",
            },
            {
              "width": "65%",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "paddingLeft": 8,
                "paddingRight": 8,
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#ffffff",
              },
              {
                "fontSize": 18,
                "lineHeight": 28,
              },
              {
                "fontFamily": "Nunito-Medium",
              },
            ]
          }
        >
          Dar de baja
        </Text>
      </View>
    </Text>
  </View>
</View>
`;

exports[`CowCard should render correctly when mother is null 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      {
        "marginBottom": 8,
        "marginTop": 8,
      },
      {
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
      {
        "marginLeft": -10,
      },
      {
        "marginRight": 24,
      },
      {
        "backgroundColor": "#272727",
      },
      {
        "borderBottomRightRadius": 24,
        "borderTopRightRadius": 24,
      },
      {
        "borderRightWidth": 4,
      },
      {
        "borderBottomColor": "#6bc0eb",
        "borderLeftColor": "#6bc0eb",
        "borderRightColor": "#6bc0eb",
        "borderTopColor": "#6bc0eb",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "marginBottom": 8,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "alignItems": "center",
          },
          {
            "borderBottomWidth": 2,
            "borderTopWidth": 2,
          },
          {
            "borderRightWidth": 2,
          },
          {
            "borderBottomLeftRadius": 16,
            "borderBottomRightRadius": 16,
            "borderTopLeftRadius": 16,
            "borderTopRightRadius": 16,
          },
          {
            "borderBottomColor": "#6bc0eb",
            "borderLeftColor": "#6bc0eb",
            "borderRightColor": "#6bc0eb",
            "borderTopColor": "#6bc0eb",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#ffffff",
            },
            {
              "fontSize": 14,
              "lineHeight": 20,
            },
            {
              "fontFamily": "Nunito-Bold",
            },
          ]
        }
      />
      <Text
        style={
          [
            {
              "color": "#ffffff",
            },
            {
              "fontSize": 24,
              "lineHeight": 32,
            },
            {
              "fontFamily": "Nunito-Bold",
            },
            [
              {
                "marginLeft": 16,
              },
            ],
          ]
        }
      >
        Vaca Test
      </Text>
    </View>
    <View
      style={
        [
          {
            "marginLeft": 8,
          },
          {
            "marginTop": 8,
          },
          {
            "flexDirection": "column",
          },
          {
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "marginBottom": 8,
            },
            {
              "flexDirection": "row",
            },
            {
              "alignItems": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#6bc0eb",
              },
              {
                "fontSize": 18,
                "lineHeight": 28,
              },
              {
                "fontFamily": "Nunito-BoldItalic",
              },
            ]
          }
        >
          COW001
        </Text>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "column",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#ffffff",
              },
              {
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "fontFamily": "Nunito-Medium",
              },
            ]
          }
        >
          Se incorporó en: 
          1/1/2022
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
              },
              {
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "fontFamily": "Nunito-Medium",
              },
            ]
          }
        >
          Sexo: 
          Femenino
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
              },
              {
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "fontFamily": "Nunito-Medium",
              },
            ]
          }
        >
          Raza: 
          Holstein
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
              },
              {
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "fontFamily": "Nunito-Medium",
              },
            ]
          }
        >
          Fase: 
          Ternero
        </Text>
        <Text
          style={
            [
              {
                "color": "#ffffff",
              },
              {
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "fontFamily": "Nunito-Medium",
              },
            ]
          }
        >
          Es hijo/a de: 
          Desconocida
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "backgroundColor": "#272727",
        },
        {
          "borderRightWidth": 8,
        },
        {
          "borderLeftWidth": 8,
        },
        {
          "borderBottomColor": "#2254ba",
          "borderLeftColor": "#2254ba",
          "borderRightColor": "#2254ba",
          "borderTopColor": "#2254ba",
        },
        {
          "borderBottomLeftRadius": 24,
          "borderBottomRightRadius": 24,
          "borderTopLeftRadius": 24,
          "borderTopRightRadius": 24,
        },
        {
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        },
        {
          "marginBottom": 8,
          "marginLeft": 8,
          "marginRight": 8,
          "marginTop": 8,
        },
      ]
    }
    testID="delete-cow-button"
  >
    <Text
      style={
        [
          {
            "color": "#ffffff",
          },
          {
            "fontSize": 18,
            "lineHeight": 28,
          },
          {
            "textAlign": "center",
          },
          {
            "fontFamily": "Nunito-Medium",
          },
          {
            "marginLeft": 8,
            "marginRight": 8,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            {
              "alignItems": "center",
            },
            {
              "width": "65%",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "paddingLeft": 8,
                "paddingRight": 8,
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#ffffff",
              },
              {
                "fontSize": 18,
                "lineHeight": 28,
              },
              {
                "fontFamily": "Nunito-Medium",
              },
            ]
          }
        >
          Dar de baja
        </Text>
      </View>
    </Text>
  </View>
</View>
`;
